--- a/lib/web/templates/admin/skill/edit.html.eex
+++ b/lib/web/templates/admin/skill/edit.html.eex
@@ -9,8 +9,7 @@
         <i class="fa fa-dashboard"></i> Home
       <% end %>
     </li>
-    <li><%= link("Classes", to: class_path(@conn, :index)) %></li>
-    <li><%= link(@skill.class.name, to: class_path(@conn, :show, @skill.class_id)) %></li>
+    <li><%= link("Skills", to: skill_path(@conn, :index)) %></li>
     <li><%= link(@skill.name, to: skill_path(@conn, :show, @skill.id)) %></li>
     <li class="active">Edit</li>
   </ol>
