--- a/lib/web/templates/admin/skill/_form.html.eex
+++ b/lib/web/templates/admin/skill/_form.html.eex
@@ -59,6 +59,14 @@
       </div>
 
       <div class="form-group">
+        <%= label f, :is_global do %>
+          <%= checkbox f, :is_global %> Is Global?
+        <% end %>
+        <%= error_tag f, :is_global %>
+        <span class="help-block">A global skill is something all players will unlock when they reach the skill level</span>
+      </div>
+
+      <div class="form-group">
         <%= label f, :effects %>
         <%= textarea f, :effects, value: @changeset |> json_field(:effects), class: "form-control", rows: 15 %>
         <%= error_tag f, :effects %>
