--- a/lib/web/templates/admin/skill/show.html.eex
+++ b/lib/web/templates/admin/skill/show.html.eex
@@ -64,6 +64,10 @@
                 <td><%= @skill.points %></td>
               </tr>
               <tr>
+                <th>Is Global?</th>
+                <td><span class="label label-default"><%= @skill.is_global %></span></td>
+              </tr>
+              <tr>
                 <th>Effects</th>
                 <td><pre><%= @skill |> json_field(:effects) %></pre></td>
               </tr>
