--- a/lib/web/templates/class/show.html.eex
+++ b/lib/web/templates/class/show.html.eex
@@ -7,13 +7,15 @@
 
 <div class="row">
   <div class="col-md-12">
+    <h3>Skills</h3>
     <ul class="list-group">
-      <%= Enum.map(@class.skills, fn (skill) -> %>
+      <%= Enum.map(@class.class_skills, fn (class_skill) -> %>
         <li class="list-group-item">
-          <h5><%= skill.name %></h5>
-          <span>Level <%= skill.level %> - <%= skill.points %> sp</span>
-          <p>Command: <code><%= skill.command %></code></p>
-          <p><%= skill.description %></p>
+          <span>
+            <%= link(to: public_skill_path(@conn, :show, class_skill.skill_id)) do %>
+              Level <%= class_skill.skill.level %> - <%= class_skill.skill.name %>
+            <% end %>
+          </span>
         </li>
       <% end) %>
     </ul>
