--- a/lib/web/templates/admin/quest/show.html.eex
+++ b/lib/web/templates/admin/quest/show.html.eex
@@ -16,7 +16,7 @@
 
 <section class="content">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <div class="box">
         <div class="box-header">
           <h3 class="box-title">Attributes</h3>
@@ -35,6 +35,10 @@
               <td><%= @quest.name %></td>
             </tr>
             <tr>
+              <th>Giver</th>
+              <td><%= link(@quest.giver.name, to: npc_path(@conn, :show, @quest.giver.id)) %></td>
+            </tr>
+            <tr>
               <th>Description</th>
               <td><%= @quest.description %></td>
             </tr>
@@ -42,10 +46,18 @@
               <th>Completed Message</th>
               <td><%= @quest.completed_message %></td>
             </tr>
-            <tr>
-              <th>Script</th>
-              <td><pre><%= @quest.script |> Poison.encode!(pretty: true) %></pre></td>
-            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Rewards</h3>
+        </div>
+        <div class="box-body">
+          <table class="table">
             <tr>
               <th>Experience</th>
               <td><%= @quest.experience %></td>
@@ -54,11 +66,20 @@
               <th><%= currency() |> String.capitalize() %></th>
               <td><%= @quest.currency %></td>
             </tr>
-            <tr>
-              <th>Giver</th>
-              <td><%= link(@quest.giver.name, to: npc_path(@conn, :show, @quest.giver.id)) %></td>
-            </tr>
           </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="box">
+        <div class="box-header">
+          <h3 class="box-title">Script</h3>
+        </div>
+        <div class="box-body">
+          <pre><%= @quest.script |> Poison.encode!(pretty: true) %></pre>
         </div>
       </div>
     </div>
