--- a/lib/web/templates/layout/admin.html.eex
+++ b/lib/web/templates/layout/admin.html.eex
@@ -112,6 +112,11 @@
               <%= link(to: bug_path(@conn, :index)) do %>
                 <i class="fa fa-bug"></i>
                 <span>Bugs</span>
+                <%= if Bug.incomplete_count() > 0 do %>
+                  <span class="pull-right-container">
+                    <span class="label bg-red pull-right"><%= Bug.incomplete_count() %></span>
+                  </span>
+                <% end %>
               <% end %>
             </li>
             <li class="<%= tab_selected(@conn, "config") %>">
