--- a/lib/web/templates/admin/user/edit.html.eex
+++ b/lib/web/templates/admin/user/edit.html.eex
@@ -1,6 +1,6 @@
 <section class="content-header">
   <h1>
-    Watching <%= @user.name %>
+    <%= @user.name %>
   </h1>
 
   <ol class="breadcrumb">
@@ -11,27 +11,14 @@
     </li>
     <li><%= link("Users", to: user_path(@conn, :index)) %></li>
     <li><%= link(@user.name, to: user_path(@conn, :show, @user.id)) %></li>
-    <li class="active">Watch</li>
+    <li class="active">Edit</li>
   </ol>
 </section>
 
 <section class="content">
   <div class="row">
     <div class="col-md-12">
-      <div class="box">
-        <div class="box-header">
-          <h3 class="box-title">Stream</h3>
-        </div>
-        <div class="box-body">
-          <pre class="console" style="height: 600px; overflow-y: scroll"></pre>
-        </div>
-      </div>
+      <%= render "_form.html", path: user_path(@conn, :update, @user.id), changeset: @changeset, title: "Edit", submit: "Update" %>
     </div>
   </div>
 </section>
-
-<script type="application/javascript">
-$(function () {
-  new UserSocket(<%= @user.id %>).connect();
-});
-</script>
