Add Skill not item

--- a/lib/web/templates/admin/npc_skill/new.html.eex
+++ b/lib/web/templates/admin/npc_skill/new.html.eex
@@ -32,7 +32,7 @@
           </div>
 
           <div class="box-footer">
-            <%= submit "Add Item", class: "btn btn-primary" %>
+            <%= submit "Add Skill", class: "btn btn-primary" %>
           </div>
         <% end %>
       </div>
