--- a/lib/web/templates/admin/room_feature/_form.html.eex
+++ b/lib/web/templates/admin/room_feature/_form.html.eex
@@ -8,11 +8,13 @@
       <div class="form-group">
         <%= label :feature, :key %>
         <%= text_input :feature, :key, value: Map.get(@feature, :key, ""), class: "form-control" %>
+        <span class="help-block">This will be used as the lookup key for the <code>look</code> command</span
       </div>
 
       <div class="form-group">
         <%= label :feature, :short_description %>
         <%= text_input :feature, :short_description, value: Map.get(@feature, :short_description, ""), class: "form-control" %>
+        <span class="help-block">The key should be included in this description, it will be color coded white to show it can be looked at further</span>
       </div>
 
       <div class="form-group">
