Keep newlines in the room descriptions of the admin

--- a/lib/web/templates/admin/room/show.html.eex
+++ b/lib/web/templates/admin/room/show.html.eex
@@ -39,7 +39,7 @@
               </tr>
               <tr>
                 <th>Description</th>
-                <td><%= @room.description %></td>
+                <td><%= @room.description |> keep_newlines() %></td>
               </tr>
               <tr>
                 <th><%= currency() |> String.capitalize() %> in Room</th>
