Quests to give items to NPCs

--- a/lib/web/templates/admin/quest/show.html.eex
+++ b/lib/web/templates/admin/quest/show.html.eex
@@ -114,6 +114,12 @@
                           <b>Count:</b> <%= quest_step.count %><br />
                           <b>Item:</b> <%= link(quest_step.item.name, to: item_path(@conn, :show, quest_step.item_id)) %>
                         </dl>
+                      <% "item/give" -> %>
+                        <dl>
+                          <b>Count:</b> <%= quest_step.count %><br />
+                          <b>Item:</b> <%= link(quest_step.item.name, to: item_path(@conn, :show, quest_step.item_id)) %>
+                          <b>NPC:</b> <%= link(quest_step.npc.name, to: npc_path(@conn, :show, quest_step.npc_id)) %>
+                        </dl>
                       <% "item/have" -> %>
                         <dl>
                           <b>Count:</b> <%= quest_step.count %><br />
