Require one time passwords when signing in via telnet

--- a/lib/web/templates/account/_sidebar.html.eex
+++ b/lib/web/templates/account/_sidebar.html.eex
@@ -6,6 +6,9 @@
       <% end %>
     </li>
     <li class="nav-item">
+      <%= link("Password (Telnet)", to: public_account_path(@conn, :password), class: "nav-link") %>
+    </li>
+    <li class="nav-item">
       <%= link("Settings", to: public_account_path(@conn, :show), class: "nav-link") %>
     </li>
   </ul>
